8. Practice Project/File Structure K8S/network/networkpolicy.yaml
# networkpolicy.yaml placeholder
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-api
spec:
  podSelector:
    matchLabels:
      app: bidaapi
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: bida-moha-api
      ports:
        - protocol: TCP
          port: 8080
